fix: add author_email and url in metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,9 @@ license = MIT
 description = Handle graceful process termination
 long_description = file: README.rst
 author = Zhang JianAo
-author_email = <Optional: author e-mail>
+author_email = zhangjianao@gmail.com
+url = https://github.com/ZhangJianAo/safe-exit
+
 classifiers=
    Development Status :: 6 - Mature
    License :: OSI Approved :: MIT License
@@ -18,6 +20,3 @@ package_dir =
 include_package_data = True
 install_requires =
    psutil
-
-[options.packages.find]
-where=.
